tests/compile_time_tests/tag_attribute_argument_is_not_assignment.stderr
error: `tag` attribute expects an assignment expression `[tag(case = "lower" | "upper")]`
 --> tests/compile_time_tests/tag_attribute_argument_is_not_assignment.rs:5:11
  |
5 |     #[tag(1)]
  |           ^
