tests/compile_time_tests/tag_attribute_argument_is_not_assignment.rs
use tagname::TagName;

#[derive(TagName)]
enum Cases {
    #[tag(1)]
    Lower,
    Upper
}

fn main() {
}
